Final Commit for Release v1.0

--- a/Frontend/my-photo-links/src/app/app.component.html
+++ b/Frontend/my-photo-links/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ngx-ui-loader></ngx-ui-loader>
 <mat-sidenav-container>
   <mat-sidenav #sideNav role="navigation">
     <app-side-nav (closeSideNav)="sideNav.close()"></app-side-nav>
