--- a/Frontend/my-photo-links/src/app/auth/forget-password/forget-password.component.html
+++ b/Frontend/my-photo-links/src/app/auth/forget-password/forget-password.component.html
@@ -19,11 +19,11 @@
                 <mat-error *ngIf="userNameFormgroup.controls.username.hasError('required')">Username is missing</mat-error>
                 <mat-error *ngIf="userNameFormgroup.controls.username.hasError('userNotExist')">User name doesn't exist</mat-error>
               </mat-form-field>
-              <div *ngIf="!isUsernameValidating">
+              <div>
               <button mat-button color="primary" matStepperNext [disabled]="userNameFormgroup.controls.username.invalid || !userNameFormgroup.hasError('modified')" (click)="getUserSecQues()">Validate</button>
               <button mat-button matStepperNext color="primary" [disabled]="userNameFormgroup.invalid">Next</button>
               </div>
-              <mat-spinner *ngIf="isUsernameValidating"></mat-spinner>
+              <!-- <mat-spinner *ngIf="isUsernameValidating"></mat-spinner> -->
             </form>
           </mat-step>
 
@@ -37,11 +37,11 @@
                 <mat-error *ngIf="secQuesAnsFormGroup.controls.answer.hasError('required')">Answer is missing</mat-error>
                 <mat-error *ngIf="secQuesAnsFormGroup.controls.answer.hasError('wrongAnswer')">Wrong answer</mat-error>
               </mat-form-field>
-              <div *ngIf="!isAnswerValidating">
+              <div>
                 <button mat-button color="primary" [disabled]="secQuesAnsFormGroup.controls.answer.invalid || !secQuesAnsFormGroup.hasError('modifiedAnswer')" (click)="validateAnswer()">Validate</button>
                 <button mat-button matStepperNext color="primary" [disabled]="secQuesAnsFormGroup.invalid">Next</button>
               </div>
-              <mat-spinner *ngIf="isAnswerValidating"></mat-spinner>
+              <!-- <mat-spinner *ngIf="isAnswerValidating"></mat-spinner> -->
             </form>
           </mat-step>
     
@@ -59,10 +59,10 @@
                 <input type="password" matInput placeholder="Re-enter password" formControlName="confirmPassword" (keyup)="onKeyPassword()">
                 <mat-error *ngIf="passwordResetGroup.controls.confirmPassword.hasError('mismatch')">Passwords didn't match</mat-error>
               </mat-form-field>
-              <div *ngIf="!isLoading">
+              <div>
                 <button mat-button (click)="OnSubmit()" [disabled]="passwordResetGroup.invalid">Submit</button>
               </div>
-              <mat-spinner *ngIf="isLoading"></mat-spinner>
+              <!-- <mat-spinner *ngIf="isLoading"></mat-spinner> -->
             </form>
           </mat-step>
     
